--- a/cinema/app/src/main/res/layout/detalles_pelicula.xml
+++ b/cinema/app/src/main/res/layout/detalles_pelicula.xml
@@ -2,7 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    tools:context=".ui.cartelera.Datos">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -144,12 +146,12 @@
         android:textStyle="bold" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="15sp"
+        android:id="@+id/Sinopsis"
+        android:layout_width="378dp"
+        android:layout_height="120dp"
+        android:layout_marginLeft="15dp"
         android:layout_marginTop="10dp"
-        android:layout_marginLeft="195dp"
-        android:gravity="center"
         android:fontFamily="sans-serif-light"
-        android:id="@+id/Sinopsis"/>
+        android:gravity="center"
+        android:textSize="15sp" />
 </LinearLayout>
