--- a/cinema/app/src/main/res/layout/fragment_cartelera.xml
+++ b/cinema/app/src/main/res/layout/fragment_cartelera.xml
@@ -5,12 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/Fondo"
     tools:context=".MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="93dp"
-        android:background="@android:color/darker_gray"
+        android:layout_height="133dp"
+        android:background="@color/Banner"
         android:orientation="horizontal">
 
         <TextView
@@ -18,30 +19,47 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="45dp"
             android:layout_marginTop="20dp"
-            android:fontFamily="sans-serif-condensed"
+            android:fontFamily="@font/roboto_bold"
             android:text="Cartelera"
             android:textAllCaps="true"
-            android:textSize="20sp"
+            android:textColor="@color/white"
+            android:textSize="26sp"
             android:textStyle="bold" />
 
-        <TextView
-            android:layout_width="100dp"
-            android:layout_height="25dp"
-            android:layout_marginVertical="60dp"
-            android:layout_marginLeft="-92dp"
-            android:fontFamily="sans-serif-condensed"
-            android:text="Ubicación"
-            android:textAllCaps="true"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+        <LinearLayout
+            android:layout_width="240dp"
+            android:layout_height="60dp"
+            android:orientation="horizontal"
+            android:layout_marginLeft="-155dp"
+            android:layout_marginTop="60dp"
+            android:padding="16dp"
+            android:background="@drawable/boton">
+
+            <ImageView
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:src="@drawable/ubicacion_36x36"
+                android:layout_gravity="center_vertical"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Cd. Obregón, Sonora, Mex."
+                android:layout_marginTop="3dp"
+                android:textSize="14sp"
+                android:textColor="@color/white"
+                android:layout_marginStart="16dp"/>
+
+        </LinearLayout>
 
         <ImageButton
             android:id="@+id/buscar"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginLeft="160dp"
-            android:layout_marginVertical="50dp"
-            android:src="@drawable/baseline_buscar"
+            android:layout_width="38dp"
+            android:layout_height="35dp"
+            android:layout_marginLeft="29dp"
+            android:background="@color/Banner"
+            android:layout_marginVertical="70dp"
+            android:src="@drawable/busqueda_36x36"
             />
 
         <ImageButton
@@ -49,18 +67,26 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginLeft="5dp"
-            android:layout_marginVertical="50dp"
-            android:src="@drawable/baseline_filtros"
+            android:background="@color/Banner"
+            android:layout_marginVertical="70dp"
+            android:src="@drawable/filtros_36x36"
             />
     </LinearLayout>
 
-    <GridView
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="match_parent"
+        android:fillViewport="true">
+
+    <GridView
+        android:layout_width="430dp"
+        android:layout_height="700dp"
         android:numColumns="3"
         android:layout_marginTop="10dp"
         android:id="@+id/movies_catalog"
-        android:paddingHorizontal="6dp"/>
+        android:paddingHorizontal="15dp"
+        android:layout_marginBottom="50dp"/>
 
+    </ScrollView>
 
 </LinearLayout>
