--- a/cinema/app/src/main/res/layout/detalles_pelicula.xml
+++ b/cinema/app/src/main/res/layout/detalles_pelicula.xml
@@ -8,8 +8,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/darker_gray"
+        android:layout_height="70dp"
+        android:background="@color/Banner"
         android:orientation="horizontal">
 
         <TextView
@@ -17,56 +17,107 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="45dp"
             android:layout_marginTop="20dp"
-            android:fontFamily="sans-serif-condensed"
-            android:text="Pelicula"
-            android:textAllCaps="true"
-            android:textSize="20sp"
+            android:fontFamily="@font/roboto_bold"
+            android:text="Película"
+            android:textColor="@color/white"
+            android:textSize="26sp"
             android:textStyle="bold" />
     </LinearLayout>
 
+    <ImageButton
+        android:layout_width="38dp"
+        android:layout_height="40dp"
+        android:layout_marginHorizontal="134dp"
+        android:background="@color/Fondo"
+        android:layout_marginTop="29dp"
+        android:src="@drawable/agregar_a_lista_36x36" />
+
+    <ImageButton
+        android:layout_width="38dp"
+        android:layout_height="40dp"
+        android:layout_marginHorizontal="182dp"
+        android:background="@color/Fondo"
+        android:layout_marginTop="-40dp"
+        android:src="@drawable/por_ver_off_36x36" />
+
+    <ImageButton
+        android:layout_width="38dp"
+        android:layout_height="40dp"
+        android:layout_marginHorizontal="232dp"
+        android:background="@color/Fondo"
+        android:layout_marginTop="-39dp"
+        android:src="@drawable/vista_off_36x36" />
+
+    <ImageButton
+        android:layout_width="38dp"
+        android:layout_height="40dp"
+        android:layout_marginHorizontal="282dp"
+        android:background="@color/Fondo"
+        android:layout_marginTop="-40dp"
+        android:src="@drawable/favorita_off_36x36" />
+
+    <ImageButton
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="5dp"
+        android:background="@color/Fondo"
+        android:layout_marginTop="-41dp"
+        android:layout_marginHorizontal="330dp"
+        android:src="@drawable/compartir_36x36"
+        />
 
     <ImageView
-        android:layout_width="150dp"
-        android:layout_height="180dp"
+        android:layout_width="120dp"
+        android:layout_height="190dp"
         android:id="@+id/imagen"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="20dp"
         android:layout_marginLeft="30dp"
         android:scaleType="fitXY"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="15sp"
         android:layout_marginTop="-180dp"
         android:layout_marginLeft="190dp"
-        android:fontFamily="sans-serif-light"
+        android:textColor="@color/white"
+        android:textSize="22sp"
+        android:textStyle="bold"
         android:id="@+id/titulo"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="15sp"
+        android:textSize="8sp"
         android:layout_marginTop="20dp"
         android:layout_marginLeft="190dp"
-        android:fontFamily="sans-serif-light"
+        android:background="@color/white"
+        android:fontFamily="@font/roboto_bold"
+        android:padding="4dp"
+        android:textColor="@color/Banner"
         android:id="@+id/clasificacion"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="15sp"
-        android:layout_marginTop="-20dp"
+        android:textSize="8sp"
+        android:layout_marginTop="-19dp"
         android:layout_marginLeft="210dp"
-        android:fontFamily="sans-serif-light"
+        android:background="@color/white"
+        android:fontFamily="@font/roboto_bold"
+        android:padding="4dp"
+        android:textColor="@color/Banner"
         android:id="@+id/duracion"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="15sp"
+        android:textSize="8sp"
         android:layout_marginTop="-20dp"
-        android:layout_marginLeft="230dp"
-        android:fontFamily="sans-serif-light"
+        android:layout_marginLeft="235dp"
+        android:background="@color/white"
+        android:fontFamily="@font/roboto_bold"
+        android:padding="4dp"
+        android:textColor="@color/Banner"
         android:id="@+id/categoria"/>
 
     <TextView
@@ -74,84 +125,143 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="190dp"
         android:layout_marginTop="20dp"
-        android:fontFamily="sans-serif-condensed"
         android:text="Director"
         android:textAllCaps="true"
-        android:textSize="20sp"
+        android:textColor="@color/white"
+        android:fontFamily="@font/roboto_bold"
+        android:textSize="15dp"
         android:textStyle="bold" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="300dp"
-        android:layout_marginTop="-27dp"
-        android:fontFamily="sans-serif-condensed"
+        android:layout_marginTop="-21dp"
         android:text="Reparto"
         android:textAllCaps="true"
-        android:textSize="20sp"
+        android:textColor="@color/white"
+        android:fontFamily="@font/roboto_bold"
+        android:textSize="15dp"
         android:textStyle="bold" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="15sp"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="195dp"
+        android:textColor="@color/white"
         android:fontFamily="sans-serif-light"
+        android:textSize="13sp"
         android:id="@+id/director"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="15sp"
         android:layout_marginTop="-20dp"
         android:layout_marginLeft="310dp"
+        android:textColor="@color/white"
         android:fontFamily="sans-serif-light"
+        android:textSize="13sp"
         android:id="@+id/reparto"/>
-
     <TextView
-        android:layout_width="350dp"
-        android:layout_height="50dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="60dp"
-        android:fontFamily="sans-serif-condensed"
-        android:gravity="center"
-        android:text="Calificación Media de los Usuarios."
-        android:textAllCaps="true"
-        android:textSize="20sp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:layout_width="90dp"
-        android:layout_height="50dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="60dp"
-        android:fontFamily="sans-serif-condensed"
-        android:gravity="center"
-        android:text="Trailer"
-        android:textAllCaps="true"
-        android:textSize="20sp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:layout_width="90dp"
-        android:layout_height="50dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="60dp"
-        android:fontFamily="sans-serif-condensed"
-        android:gravity="center"
-        android:text="Sinopsis"
-        android:textAllCaps="true"
-        android:textSize="20sp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/Sinopsis"
-        android:layout_width="378dp"
-        android:layout_height="120dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="13sp"
+        android:layout_marginTop="-20dp"
+        android:layout_marginLeft="310dp"
+        android:textColor="@color/white"
         android:fontFamily="sans-serif-light"
-        android:gravity="center"
-        android:textSize="15sp" />
+        android:id="@+id/reparto1"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="-20dp"
+        android:layout_marginLeft="310dp"
+        android:textColor="@color/white"
+        android:fontFamily="sans-serif-light"
+        android:textSize="13sp"
+        android:id="@+id/reparto2"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="-20dp"
+        android:layout_marginLeft="310dp"
+        android:textColor="@color/white"
+        android:fontFamily="sans-serif-light"
+        android:textSize="13sp"
+        android:id="@+id/reparto3"/>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true"
+        android:layout_marginTop="58dp">
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="474dp"
+        android:orientation="vertical"
+        android:layout_marginTop="1dp">
+
+        <TextView
+            android:layout_width="390dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="10dp"
+            android:fontFamily="@font/roboto_bold"
+            android:gravity="center"
+            android:text="Calificación Media de los Usuarios."
+            android:textAllCaps="true"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <RatingBar
+            android:id="@+id/ratingbar"
+            android:layout_width="235dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="-10dp"
+            android:numStars="5"
+            android:progressTint="@color/yellow"
+            android:scaleX="0.5"
+            android:scaleY="0.5"
+            android:stepSize="0.5" />
+
+        <TextView
+            android:layout_width="90dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
+            android:fontFamily="@font/roboto_bold"
+            android:gravity="center"
+            android:text="Trailer"
+            android:textAllCaps="true"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="95dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="60dp"
+            android:fontFamily="@font/roboto_bold"
+            android:gravity="center"
+            android:text="Sinopsis"
+            android:textAllCaps="true"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/Sinopsis"
+            android:layout_width="378dp"
+            android:layout_height="120dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="10dp"
+            android:fontFamily="sans-serif-light"
+            android:textSize="12sp" />
+
+    </LinearLayout>
+    </ScrollView>
 </LinearLayout>
