--- a/cinema/app/src/main/res/values/colors.xml
+++ b/cinema/app/src/main/res/values/colors.xml
@@ -4,7 +4,10 @@
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
+    <color name="yellow">#FFD700</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="Banner">#1E1E1E </color>
+    <color name="Fondo">#333333</color>
 </resources>
