--- a/cinema/app/src/main/res/layout/activity_inicio_sesion.xml
+++ b/cinema/app/src/main/res/layout/activity_inicio_sesion.xml
@@ -12,7 +12,8 @@
         android:layout_height="147dp"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="0dp"
-        tools:srcCompat="@tools:sample/backgrounds/scenic" />
+        tools:srcCompat="@tools:sample/backgrounds/scenic"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/textView3"
@@ -26,45 +27,45 @@
 
     <ImageView
         android:id="@+id/imageView6"
-        android:layout_width="106dp"
-        android:layout_height="104dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="56dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView5"
-        tools:srcCompat="@tools:sample/avatars" />
+        tools:srcCompat="@drawable/usuario_36x36" />
 
     <ImageView
         android:id="@+id/imageView7"
         android:layout_width="23dp"
         android:layout_height="21dp"
-        android:layout_marginTop="24dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.288"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView6"
-        tools:srcCompat="@tools:sample/avatars" />
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="3dp"
+        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
+
+        app:layout_constraintEnd_toStartOf="@+id/textView4"
+        tools:srcCompat="@drawable/usuario_36x36" />
 
     <ImageView
         android:id="@+id/imageView8"
         android:layout_width="23dp"
         android:layout_height="21dp"
-        android:layout_marginEnd="12dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName2"
         app:layout_constraintEnd_toStartOf="@+id/textView6"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.985"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="456dp"
-        tools:srcCompat="@tools:sample/avatars" />
+        tools:srcCompat="@drawable/password_36x36" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="123dp"
         android:layout_height="24dp"
+        android:layout_marginStart="148dp"
         android:text="Nombre de usuario"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.08"
-        app:layout_constraintStart_toEndOf="@+id/imageView7"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView6" />
 
     <TextView
