--- a/cinema/app/src/main/res/values/colors.xml
+++ b/cinema/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="Banner">#1E1E1E </color>
     <color name="Fondo">#333333</color>
+    <color name="editTextGray">#5D6064</color>
 </resources>
