--- a/cinema/app/src/main/res/layout/activity_inicio_sesion.xml
+++ b/cinema/app/src/main/res/layout/activity_inicio_sesion.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.InicioSesionActivity">
+    tools:context=".ui.InicioSesionActivity"
+    android:background="@color/almostblack">
 
     <ImageView
         android:id="@+id/imageView5"
