--- a/cinema/app/src/main/res/values/colors.xml
+++ b/cinema/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="yellow">#FFD700</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="almostblack">#070808</color>
     <color name="white">#FFFFFFFF</color>
     <color name="Banner">#1E1E1E </color>
     <color name="Fondo">#333333</color>
