push de estrenos inicio

--- a/cinema/app/src/main/res/layout/fragment_estrenos.xml
+++ b/cinema/app/src/main/res/layout/fragment_estrenos.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.estrenos.EstrenosFragment">
+    tools:context=".ui.estrenos.EstrenosFragment"
+    android:background="@color/Banner"
+    >
 
     <TextView
         android:id="@+id/textView2"
@@ -15,19 +17,26 @@
         android:layout_marginEnd="8dp"
         android:text="Próximos Estrenos"
         android:textAlignment="center"
-        android:textSize="20sp"
+        android:textSize="30sp"
+        android:textColor="@color/white"
+        android:textFontWeight="500"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/boton"
-        android:layout_width="189dp"
-        android:layout_height="66dp"
+        android:layout_width="232dp"
+        android:layout_height="43dp"
         android:layout_marginTop="4dp"
-        android:text="Ciudad Obregon Sonora"
+        android:background="@drawable/roundedbutton"
+        android:backgroundTint="@color/Fondo"
+        android:text="Ciudad Obregon Sonora, mex"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:textColor="@color/white"
+        android:textFontWeight="400"
+        android:textSize="11sp"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <ScrollView
