--- a/cinema/app/src/main/res/layout/activity_registrarse.xml
+++ b/cinema/app/src/main/res/layout/activity_registrarse.xml
@@ -11,18 +11,19 @@
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="8dp"
+        android:textAllCaps="false"
         android:text="Regístrate"
         android:textSize="28sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView9" />
 
     <ImageView
         android:id="@+id/imageView9"
         android:layout_width="wrap_content"
-        android:layout_height="147dp"
+        android:layout_height="110dp"
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="0dp"
         tools:srcCompat="@tools:sample/backgrounds/scenic" />
@@ -71,7 +72,7 @@
         android:id="@+id/textView9"
         android:layout_width="127dp"
         android:layout_height="26dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="30dp"
         android:text="Nombre de Usuario"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -81,7 +82,7 @@
         android:id="@+id/textView10"
         android:layout_width="127dp"
         android:layout_height="26dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="28dp"
         android:text="Repetir Contraseña"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -91,7 +92,7 @@
         android:id="@+id/textView11"
         android:layout_width="127dp"
         android:layout_height="26dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="28dp"
         android:text="Contraseña"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -101,8 +102,8 @@
         android:id="@+id/textView12"
         android:layout_width="127dp"
         android:layout_height="26dp"
-        android:layout_marginTop="8dp"
-        android:text="Contraseña"
+        android:layout_marginTop="28dp"
+        android:text="E-mail"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName6" />
@@ -161,10 +162,12 @@
 
     <Button
         android:id="@+id/btn_registrarse2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_width="150dp"
+        android:layout_height="28dp"
+        android:layout_marginTop="24dp"
+        android:background="@drawable/roundedbuttonwhite"
         android:text="Registrarse"
+        android:textColor="@color/almostblack"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
