--- a/cinema/app/src/main/res/layout/detalles_pelicula.xml
+++ b/cinema/app/src/main/res/layout/detalles_pelicula.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/Fondo"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     tools:context=".ui.cartelera.Datos">
@@ -17,12 +18,18 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="45dp"
             android:layout_marginTop="20dp"
-            android:fontFamily="@font/roboto_bold"
+            android:fontFamily="sans-serif-black"
             android:text="Película"
             android:textColor="@color/white"
-            android:textSize="26sp"
+            android:textSize="28sp"
             android:textStyle="bold" />
     </LinearLayout>
+
+    <GridView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:numColumns="3"
+        android:id="@+id/menu"/>
 
     <ImageButton
         android:layout_width="38dp"
@@ -91,7 +98,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginLeft="190dp"
         android:background="@color/white"
-        android:fontFamily="@font/roboto_bold"
+        android:fontFamily="sans-serif-black"
         android:padding="4dp"
         android:textColor="@color/Banner"
         android:id="@+id/clasificacion"/>
@@ -103,7 +110,7 @@
         android:layout_marginTop="-19dp"
         android:layout_marginLeft="210dp"
         android:background="@color/white"
-        android:fontFamily="@font/roboto_bold"
+        android:fontFamily="sans-serif-black"
         android:padding="4dp"
         android:textColor="@color/Banner"
         android:id="@+id/duracion"/>
@@ -112,10 +119,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="8sp"
-        android:layout_marginTop="-20dp"
-        android:layout_marginLeft="235dp"
+        android:layout_marginTop="-19dp"
+        android:layout_marginLeft="237dp"
         android:background="@color/white"
-        android:fontFamily="@font/roboto_bold"
+        android:fontFamily="sans-serif-black"
         android:padding="4dp"
         android:textColor="@color/Banner"
         android:id="@+id/categoria"/>
@@ -128,7 +135,7 @@
         android:text="Director"
         android:textAllCaps="true"
         android:textColor="@color/white"
-        android:fontFamily="@font/roboto_bold"
+        android:fontFamily="sans-serif-black"
         android:textSize="15dp"
         android:textStyle="bold" />
 
@@ -140,7 +147,7 @@
         android:text="Reparto"
         android:textAllCaps="true"
         android:textColor="@color/white"
-        android:fontFamily="@font/roboto_bold"
+        android:fontFamily="sans-serif-black"
         android:textSize="15dp"
         android:textStyle="bold" />
 
@@ -148,7 +155,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_marginLeft="195dp"
+        android:layout_marginLeft="188dp"
         android:textColor="@color/white"
         android:fontFamily="sans-serif-light"
         android:textSize="13sp"
@@ -157,8 +164,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="-20dp"
-        android:layout_marginLeft="310dp"
+        android:layout_marginTop="-25dp"
+        android:layout_marginLeft="299dp"
         android:textColor="@color/white"
         android:fontFamily="sans-serif-light"
         android:textSize="13sp"
@@ -167,16 +174,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="13sp"
-        android:layout_marginTop="-20dp"
-        android:layout_marginLeft="310dp"
+        android:layout_marginTop="-4dp"
+        android:layout_marginLeft="299dp"
         android:textColor="@color/white"
         android:fontFamily="sans-serif-light"
         android:id="@+id/reparto1"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="-20dp"
-        android:layout_marginLeft="310dp"
+        android:layout_marginTop="-4dp"
+        android:layout_marginLeft="299dp"
         android:textColor="@color/white"
         android:fontFamily="sans-serif-light"
         android:textSize="13sp"
@@ -184,8 +191,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="-20dp"
-        android:layout_marginLeft="310dp"
+        android:layout_marginTop="-2dp"
+        android:layout_marginLeft="299dp"
         android:textColor="@color/white"
         android:fontFamily="sans-serif-light"
         android:textSize="13sp"
@@ -207,7 +214,7 @@
             android:layout_height="50dp"
             android:layout_marginLeft="15dp"
             android:layout_marginTop="10dp"
-            android:fontFamily="@font/roboto_bold"
+            android:fontFamily="sans-serif-black"
             android:gravity="center"
             android:text="Calificación Media de los Usuarios."
             android:textAllCaps="true"
@@ -223,8 +230,8 @@
             android:layout_marginTop="-10dp"
             android:numStars="5"
             android:progressTint="@color/yellow"
-            android:scaleX="0.5"
-            android:scaleY="0.5"
+            android:scaleX="0.6"
+            android:scaleY="0.6"
             android:stepSize="0.5" />
 
         <TextView
@@ -232,7 +239,7 @@
             android:layout_height="50dp"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="10dp"
-            android:fontFamily="@font/roboto_bold"
+            android:fontFamily="sans-serif-black"
             android:gravity="center"
             android:text="Trailer"
             android:textAllCaps="true"
@@ -243,9 +250,9 @@
         <TextView
             android:layout_width="95dp"
             android:layout_height="50dp"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="23dp"
             android:layout_marginTop="60dp"
-            android:fontFamily="@font/roboto_bold"
+            android:fontFamily="sans-serif-black"
             android:gravity="center"
             android:text="Sinopsis"
             android:textAllCaps="true"
