--- a/cinema/app/src/main/res/layout/fragment_cartelera.xml
+++ b/cinema/app/src/main/res/layout/fragment_cartelera.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="45dp"
             android:layout_marginTop="20dp"
-            android:fontFamily="@font/roboto_bold"
+            android:fontFamily="sans-serif-black"
             android:text="Cartelera"
             android:textAllCaps="true"
             android:textColor="@color/white"
@@ -27,7 +27,7 @@
             android:textStyle="bold" />
 
         <LinearLayout
-            android:layout_width="240dp"
+            android:layout_width="250dp"
             android:layout_height="60dp"
             android:orientation="horizontal"
             android:layout_marginLeft="-155dp"
@@ -44,11 +44,12 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Cd. Obregón, Sonora, Mex."
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="3dp"
-                android:textSize="14sp"
+                android:fontFamily="sans-serif-black"
+                android:text="Cd. Obregón, Sonora, Mex."
                 android:textColor="@color/white"
-                android:layout_marginStart="16dp"/>
+                android:textSize="14sp" />
 
         </LinearLayout>
 
