Avance Menú con GridView y pantallas

--- a/cinema/app/src/main/res/layout/activity_rating_pelicula.xml
+++ b/cinema/app/src/main/res/layout/activity_rating_pelicula.xml
@@ -25,6 +25,15 @@
             android:textStyle="bold" />
     </LinearLayout>
 
+    <GridView
+        android:id="@+id/gridView"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:numColumns="3"
+        android:columnWidth="100dp"
+        android:horizontalSpacing="10dp"
+        android:verticalSpacing="10dp"/>
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
