--- a/cinema/app/src/main/res/layout/activity_rating_celda.xml
+++ b/cinema/app/src/main/res/layout/activity_rating_celda.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:textColor="@color/white"
         android:layout_marginTop="19dp"
-        android:layout_marginLeft="140dp"
+        android:layout_marginLeft="130dp"
         android:textSize="22sp"
         android:textStyle="bold"
         android:id="@+id/nombre1"/>
@@ -49,7 +49,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/white"
-        android:layout_marginLeft="110dp"
+        android:layout_marginTop="-35dp"
+        android:layout_marginLeft="130dp"
         android:fontFamily="sans-serif-light"
         android:textSize="13sp"
         android:id="@+id/opinion11"/>
