--- a/cinema/app/src/main/res/layout/horarios_pelicula.xml
+++ b/cinema/app/src/main/res/layout/horarios_pelicula.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/Fondo"
     android:orientation="vertical"
+    tools:context="ui.cartelera.Horarios"
     >
 
     <LinearLayout
@@ -25,6 +26,15 @@
             android:textSize="28sp"
             android:textStyle="bold" />
     </LinearLayout>
+
+    <GridView
+        android:id="@+id/gridView"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:numColumns="3"
+        android:columnWidth="100dp"
+        android:horizontalSpacing="10dp"
+        android:verticalSpacing="10dp"/>
 
     <ImageButton
         android:id="@+id/filtros"
@@ -102,7 +112,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="10sp"
-            android:layout_marginTop="-22dp"
+            android:layout_marginTop="-21dp"
             android:layout_marginLeft="149dp"
             android:background="@android:color/darker_gray"
             android:fontFamily="sans-serif-black"
@@ -116,7 +126,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="10sp"
-            android:layout_marginTop="-23dp"
+            android:layout_marginTop="-22dp"
             android:layout_marginLeft="187dp"
             android:background="@android:color/darker_gray"
             android:fontFamily="sans-serif-black"
@@ -130,7 +140,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="10sp"
-            android:layout_marginTop="-22.5dp"
+            android:layout_marginTop="-21.5dp"
             android:layout_marginLeft="225dp"
             android:background="@android:color/darker_gray"
             android:fontFamily="sans-serif-black"
@@ -144,7 +154,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="10sp"
-            android:layout_marginTop="-22.5dp"
+            android:layout_marginTop="-21.5dp"
             android:layout_marginLeft="262dp"
             android:background="@android:color/darker_gray"
             android:fontFamily="sans-serif-black"
@@ -158,7 +168,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="10sp"
-            android:layout_marginTop="3dp"
+            android:layout_marginTop="5dp"
             android:layout_marginLeft="111dp"
             android:background="@android:color/darker_gray"
             android:fontFamily="sans-serif-black"
@@ -186,7 +196,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="10sp"
-            android:layout_marginTop="-22.5dp"
+            android:layout_marginTop="-21.5dp"
             android:layout_marginLeft="187dp"
             android:background="@android:color/darker_gray"
             android:fontFamily="sans-serif-black"
@@ -200,7 +210,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="10sp"
-            android:layout_marginTop="-22.5dp"
+            android:layout_marginTop="-21.5dp"
             android:layout_marginLeft="225dp"
             android:background="@android:color/darker_gray"
             android:fontFamily="sans-serif-black"
@@ -214,7 +224,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="10sp"
-            android:layout_marginTop="-22.4dp"
+            android:layout_marginTop="-21.5dp"
             android:layout_marginLeft="262dp"
             android:background="@android:color/darker_gray"
             android:fontFamily="sans-serif-black"
@@ -254,7 +264,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="10sp"
-            android:layout_marginTop="-22dp"
+            android:layout_marginTop="-21dp"
             android:layout_marginLeft="149dp"
             android:background="@android:color/darker_gray"
             android:fontFamily="sans-serif-black"
@@ -268,7 +278,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="10sp"
-            android:layout_marginTop="-23dp"
+            android:layout_marginTop="-22dp"
             android:layout_marginLeft="187dp"
             android:background="@android:color/darker_gray"
             android:fontFamily="sans-serif-black"
@@ -282,7 +292,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="10sp"
-            android:layout_marginTop="-22.5dp"
+            android:layout_marginTop="-21.5dp"
             android:layout_marginLeft="225dp"
             android:background="@android:color/darker_gray"
             android:fontFamily="sans-serif-black"
@@ -296,7 +306,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="10sp"
-            android:layout_marginTop="-22.5dp"
+            android:layout_marginTop="-21.5dp"
             android:layout_marginLeft="262dp"
             android:background="@android:color/darker_gray"
             android:fontFamily="sans-serif-black"
@@ -310,7 +320,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="10sp"
-            android:layout_marginTop="3dp"
+            android:layout_marginTop="5dp"
             android:layout_marginLeft="111dp"
             android:background="@android:color/darker_gray"
             android:fontFamily="sans-serif-black"
@@ -338,7 +348,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="10sp"
-            android:layout_marginTop="-22.5dp"
+            android:layout_marginTop="-21.5dp"
             android:layout_marginLeft="187dp"
             android:background="@android:color/darker_gray"
             android:fontFamily="sans-serif-black"
@@ -352,7 +362,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="10sp"
-            android:layout_marginTop="-22.5dp"
+            android:layout_marginTop="-21.5dp"
             android:layout_marginLeft="225dp"
             android:background="@android:color/darker_gray"
             android:fontFamily="sans-serif-black"
@@ -422,7 +432,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="10sp"
-            android:layout_marginTop="-22dp"
+            android:layout_marginTop="-21dp"
             android:layout_marginLeft="149dp"
             android:background="@android:color/darker_gray"
             android:fontFamily="sans-serif-black"
@@ -436,7 +446,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="10sp"
-            android:layout_marginTop="-23dp"
+            android:layout_marginTop="-22dp"
             android:layout_marginLeft="187dp"
             android:background="@android:color/darker_gray"
             android:fontFamily="sans-serif-black"
@@ -450,7 +460,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="10sp"
-            android:layout_marginTop="-22.5dp"
+            android:layout_marginTop="-21.5dp"
             android:layout_marginLeft="225dp"
             android:background="@android:color/darker_gray"
             android:fontFamily="sans-serif-black"
@@ -464,7 +474,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="10sp"
-            android:layout_marginTop="-22.5dp"
+            android:layout_marginTop="-21.5dp"
             android:layout_marginLeft="262dp"
             android:background="@android:color/darker_gray"
             android:fontFamily="sans-serif-black"
@@ -478,7 +488,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="10sp"
-            android:layout_marginTop="3dp"
+            android:layout_marginTop="5dp"
             android:layout_marginLeft="111dp"
             android:background="@android:color/darker_gray"
             android:fontFamily="sans-serif-black"
@@ -506,7 +516,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="10sp"
-            android:layout_marginTop="-22.5dp"
+            android:layout_marginTop="-21.5dp"
             android:layout_marginLeft="187dp"
             android:background="@android:color/darker_gray"
             android:fontFamily="sans-serif-black"
